--- a/public/theme.less
+++ b/public/theme.less
@@ -1044,19 +1044,19 @@ form .ant-upload {background: transparent;}
 .ant-pagination {color: @text-color;}
 .ant-pagination-item {background-color: #fff;border: 1px solid #d9d9d9;border-radius: 4px;}
 .ant-pagination-item a {color: @text-color;}
-.ant-pagination-item:focus, .ant-pagination-item:hover {border-color: @primary-color;}
-.ant-pagination-item:focus a, .ant-pagination-item:hover a {color: @primary-color;}
+.ant-pagination-item:focus, .ant-pagination-item:hover {border-color: @primary-color!important;}
+.ant-pagination-item:focus a, .ant-pagination-item:hover a {color: @primary-color!important;}
 .ant-pagination-item-active {background: #fff;border-color: @primary-color;}
-.ant-pagination-item-active a {color: @primary-color;}
+.ant-pagination-item-active a {color: @primary-color!important;}
 .ant-pagination-item-active:focus, .ant-pagination-item-active:hover {border-color: color(~`colorPalette("@{primary-color}", 5)`);}
 .ant-pagination-item-active:focus a, .ant-pagination-item-active:hover a {color: color(~`colorPalette("@{primary-color}", 5)`);}
 .ant-pagination-jump-prev .ant-pagination-item-container .ant-pagination-item-link-icon, .ant-pagination-jump-next .ant-pagination-item-container .ant-pagination-item-link-icon {color: @primary-color;}
 .ant-pagination-jump-prev .ant-pagination-item-container .ant-pagination-item-ellipsis, .ant-pagination-jump-next .ant-pagination-item-container .ant-pagination-item-ellipsis {color: rgba(0, 0, 0, 0.25);}
 .ant-pagination-prev, .ant-pagination-next, .ant-pagination-jump-prev, .ant-pagination-jump-next {color: @text-color;border-radius: 4px;}
 .ant-pagination-prev a, .ant-pagination-next a {color: @text-color;}
-.ant-pagination-prev:hover a, .ant-pagination-next:hover a {border-color: color(~`colorPalette("@{primary-color}", 5)`);}
+.ant-pagination-prev:hover a, .ant-pagination-next:hover a {border-color: color(~`colorPalette("@{primary-color}", 5)`)!important;}
 .ant-pagination-prev .ant-pagination-item-link, .ant-pagination-next .ant-pagination-item-link {background-color: #fff;border: 1px solid #d9d9d9;border-radius: 4px;}
-.ant-pagination-prev:focus .ant-pagination-item-link, .ant-pagination-next:focus .ant-pagination-item-link, .ant-pagination-prev:hover .ant-pagination-item-link, .ant-pagination-next:hover .ant-pagination-item-link {color: @primary-color;border-color: @primary-color;}
+.ant-pagination-prev:focus .ant-pagination-item-link, .ant-pagination-next:focus .ant-pagination-item-link, .ant-pagination-prev:hover .ant-pagination-item-link, .ant-pagination-next:hover .ant-pagination-item-link {color: @primary-color!important;border-color: @primary-color;}
 .ant-pagination-disabled a, .ant-pagination-disabled:hover a, .ant-pagination-disabled:focus a, .ant-pagination-disabled .ant-pagination-item-link, .ant-pagination-disabled:hover .ant-pagination-item-link, .ant-pagination-disabled:focus .ant-pagination-item-link {color: rgba(0, 0, 0, 0.25);border-color: #d9d9d9;}
 .ant-pagination-options-quick-jumper input {color: @text-color;background-color: #fff;background-image: none;border: 1px solid #d9d9d9;border-radius: 4px;}
 .ant-pagination-options-quick-jumper input::-moz-placeholder {color: #bfbfbf;}
