--- a/src/assets/css/module/theme.less
+++ b/src/assets/css/module/theme.less
@@ -262,6 +262,9 @@
 .ant-select-arrow{
   color: rgba(255,255,255,.65);
 }
+.ant-pagination-item-ellipsis{
+  color: rgba(255,255,255,.65);
+}
 }
 // Tab 点样式
 .pear-dot-tab {
