完善全局暗黑主题 fix

--- a/src/component/footer/src/index.less
+++ b/src/component/footer/src/index.less
@@ -1,5 +1,5 @@
 .page-footer {
-    padding: 25px;
+    padding: 25px!important;
     color: #808695;
     .page-footer-title a{
         color: #808695;
