--- a/src/assets/css/layout.less
+++ b/src/assets/css/layout.less
@@ -143,7 +143,6 @@
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
   z-index: 100;
 }
-
 .ant-layout-sider {
   background: #191a23 !important;
   &.fixed-side {
@@ -199,7 +198,7 @@
 }
 #logo .title {
   display: inline-block;
-  color: #1890ff !important;
+  color: @primary-color !important;
   font-size: 23px;
   margin-top: 2px;
   height: 60px;
@@ -341,7 +340,7 @@
   height: 63px;
   top: -6px;
   left: -5px;
-  border: #1890ff 2.2px solid;
+  border: @primary-color 2.2px solid;
   opacity: 1;
   border-radius: 6px;
 }
