--- a/src/assets/css/index.less
+++ b/src/assets/css/index.less
@@ -1,3 +1,3 @@
-@import './module/anima.less';
-@import './module/theme.less';
-@import './module/layout.less';
+@import './color.less';
+@import './theme.less';
+@import './layout.less';
