--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -1,116 +1,18 @@
 @primary-color: #2d8cf0;
 
 #nprogress .bar {
-  background:@primary-color!important;
+  background: @primary-color!important;
 }
 #nprogress .peg {
-  box-shadow:@primary-color!important;
+  box-shadow: @primary-color!important;
 }
 
-/// 夜间模式
-#layout.theme-night {
-  #logo {
-    height: 60px;
-    border-bottom: 1px solid black;
-    background: #141414;
-    border-right: 1px solid black;
-  }
-  #header {
-    .next-menu {
-      .menu-item:hover {
-        background-color: #262626!important;
-        transition: all .5s;
-      }
-    }
-    .prev-menu {
-      .menu-item:hover {
-        background-color: #262626 !important;
-        transition: all .5s;
-      }
-    }
-    .comp-menu {
-      display: inline-block;
-      height: 60px;
-      line-height: 60px;
-      padding-left: 30px;
-      .menu-item {
-        color: white;
-        height: 60px;
-        line-height: 60px;
-        display: inline-block;
-        padding-left: 15px;
-        padding-right: 15px;
-        font-size: 14.5px;
-      }
-      .is-active {
-        border-top: 3px solid @primary-color !important;
-      }
-    }
-    background: #141414 !important;
-    padding-left: 10px;
-    padding-right: 10px;
-    color: white;
-  }
-  .ant-menu-dark .ant-menu-sub,
-  .ant-menu-dark {
-    background: #141414 !important;
-  }
-  .ant-layout-sider {
-    background: #141414 !important;
-  }
-  .ant-layout-content {
-    background: black !important;
-    .ant-divider {
-      background-color: black !important;
-    }
-    .ant-card {
-      border: solid 1px #141414 !important;
-      background: #141414 !important;
-      color: white !important;
-    }
-    .tab-tool {
-      border: solid 1px black !important;
-      background: #141414!important;
-      color: white !important;
-    }
-    .ant-tabs-bar{
-      border: none;
-    }
-    .ant-tabs-nav .ant-tabs-tab::before {
-      background-color: gray;
-    }
-    .ant-statistic-title {
-      color: white !important;
-    }
-    .pear-dot-tab .ant-tabs-tab {
-      color: white !important;
-      background-color: #141414;
-      border: none;
-      margin-left: 6px; 
-    }
-    .pear-card-tab {
-      border: black 1px solid;
-      background-color: #141414 !important;
-    }
-    .ant-progress-inner {
-      background-color: black;
-      border-right: 1px solid black;
-    }
-    .tab-tool {
-      border-left: 1px solid black;
-    }
-    .ant-progress-text {
-      color: white !important;
-    }
-  }
-  .ant-drawer-content {
-    background-color: #141414 !important;
-  }
-}
-// Tab 点样式
 .pear-dot-tab {
   height: 45.5px;
   line-height: 45.5px;
+}
+.pear-dot-tab .ant-tabs-tab-active::before{
+  background-color: @primary-color!important;
 }
 .pear-dot-tab .tab {
   width: calc(~"(100% - 40px)");
@@ -135,9 +37,6 @@
   top: 6px;
   right: 6px;
   border: none;
-}
-.pear-dot-tab .ant-tabs-tab-active::before{
-  background-color: @primary-color!important;
 }
 .pear-dot-tab .ant-tabs-bar {
   margin: 0px !important;
@@ -172,9 +71,9 @@
 }
 .pear-dot-tab .ant-tabs-nav .ant-tabs-tab::before {
   background-color: whitesmoke;
-  height: 8px;
-  width: 8px;
-  border-radius: 50px;
+  height: 7.6px;
+  width: 7.6px;
+  border-radius: 500px;
   position: absolute;
   margin-top: 14.5px;
   margin-left: 13px;
@@ -183,7 +82,7 @@
   margin-left: 13.5px;
   color: #808695;
 }
-// tab 卡片样式
+
 .pear-card-tab {
   height: 40.5px;
   line-height: 40.5px;
@@ -192,12 +91,12 @@
   border-top: 1px solid whitesmoke;
   border-bottom: 1px solid whitesmoke;
 }
+.pear-card-tab .ant-tabs-tab-active::before{
+  background-color: @primary-color!important;
+}
 .pear-card-tab .tab {
   width: calc(~"(100% - 40px)");
   display: inline-block;
-}
-.pear-card-tab .ant-tabs-tab-active::before{
-  background-color: @primary-color!important;
 }
 .pear-card-tab .ant-tabs-nav-container {
   padding-left: 40px;
@@ -277,6 +176,12 @@
   line-height: 34px !important;
   text-align: center;
 }
+.pear-label-tab .ant-tabs-tab-active{
+  background-color: @primary-color!important;
+}
+.pear-label-tab .ant-tabs-tab-active *{
+  color:white!important;
+}
 .pear-label-tab .ant-tabs-tab-next {
   border-left: 1px solid whitesmoke;
   height: 34px !important;
@@ -327,28 +232,12 @@
   color: #808695;
 }
 
-/** Ant Design 的 通 用 美 化 */
-
-/** 卡 片 美 化 */
-.ant-card {
-  border-radius: 4px !important;
-}
-.ant-card-bordered {
-  border: none !important;
-}
-.ant-divider {
-  background-color: whitesmoke !important;
-}
-.ant-layout-content {
-  flex: 1 !important;
-}
-
-// 动画一
+// 路由动画
 .fade-right-enter-active {
-  transition: all .60s;
+  transition: all .90s;
 }
 .fade-right-leave-active{
-  transition: all .60s;
+  transition: all .90s;
 }
 .fade-right-enter-from {
   opacity: 0;
@@ -360,12 +249,11 @@
   display: none;
 }
 
-// 动画二
 .fade-top-enter-active {
-  transition: all .60s;
+  transition: all .90s;
 }
 .fade-top-leave-active{
-  transition: all .60s;
+  transition: all .90s;
 }
 .fade-top-enter-from {
   opacity: 0;
@@ -375,4 +263,19 @@
   opacity: 0;
   transform: translateY(-35px);
   display: none;
+}
+
+/** Antd 的 通 用 美 化 */
+
+.ant-card {
+  border-radius: 4px !important;
+}
+.ant-card-bordered {
+  border: none !important;
+}
+.ant-divider {
+  background-color: whitesmoke !important;
+}
+.ant-layout-content {
+  flex: 1 !important;
 }
