--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -265,7 +265,6 @@
   display: none;
 }
 
-/** Antd 的 通 用 美 化 */
 .ant-card {
   border-radius: 4px !important;
 }
@@ -277,4 +276,56 @@
 }
 .ant-layout-content {
   flex: 1 !important;
+}
+
+.ant-menu-dark,
+.ant-menu-dark {
+  background: #191a23 !important;
+}
+.ant-menu-dark .ant-menu-inline.ant-menu-sub {
+  background-color: #101117 !important;
+}
+.ant-menu-vertical .ant-menu-item,
+.ant-menu-vertical-left .ant-menu-item,
+.ant-menu-vertical-right .ant-menu-item,
+.ant-menu-inline .ant-menu-item,
+.ant-menu-vertical .ant-menu-submenu-title,
+.ant-menu-vertical-left .ant-menu-submenu-title,
+.ant-menu-vertical-right .ant-menu-submenu-title,
+.ant-menu-inline .ant-menu-submenu-title {
+  margin-top: 5px !important;
+  margin-bottom: 5px !important;
+}
+.ant-menu-dark,
+.ant-menu-dark .ant-menu-sub {
+  background-color: #191a23 !important;
+}
+.ant-menu-horizontal > .ant-menu-item,
+.ant-menu-horizontal > .ant-menu-submenu {
+  border-bottom: none;
+  top: 0px;
+}
+.ant-menu-horizontal > .ant-menu-item,
+.ant-menu-horizontal > .ant-menu-submenu:hover {
+  border-bottom: none;
+  top: 0px;
+}
+
+.ant-menu-inline-collapsed {
+  width: auto;
+}
+@ant-menu-hieht: 48px;
+.ant-menu-vertical > .ant-menu-item,
+.ant-menu-vertical-left > .ant-menu-item,
+.ant-menu-vertical-right > .ant-menu-item,
+.ant-menu-inline > .ant-menu-item,
+.ant-menu-vertical > .ant-menu-submenu > .ant-menu-submenu-title,
+.ant-menu-vertical-left > .ant-menu-submenu > .ant-menu-submenu-title,
+.ant-menu-vertical-right > .ant-menu-submenu > .ant-menu-submenu-title,
+.ant-menu-inline > .ant-menu-submenu > .ant-menu-submenu-title {
+  height: @ant-menu-hieht !important;
+  line-height: @ant-menu-hieht !important;
+}
+.ant-menu-submenu-title>span{
+  font-size: 13.8px!important;
 }
