--- a/src/component/quick/src/index.less
+++ b/src/component/quick/src/index.less
@@ -1,13 +1,13 @@
-.card-base {
+.quick {
     border-radius: 6px;
     >div{
       padding: 14px;
     }
-    .card-base-icon {
+    .quick-icon {
       text-align: center;
       font-size: 30px;
     }
-    .card-base-title {
+    .quick-title {
       text-align: center;
       font-size: 14px;
       margin-top: 6px;
