--- a/src/component/query/src/index.less
+++ b/src/component/query/src/index.less
@@ -1,12 +1,12 @@
-.pro-query {   
-    .pro-query-select {
+.p-query {   
+    .p-query-select {
         width: 180px;
     }
-    .pro-query-button {
+    .p-query-button {
         margin-left: 3px;
         margin-right: 3px;
     }
-    .pro-query-hidden {
+    .p-query-hidden {
         margin-left: 10px;
     }
 }
